# NucleoCMakeExample

./: .mxproject  CMakeLists.txt  FirstNucleo.ioc  Makefile  README.md  arm-none-eabi-gcc.cmake  cmake_install.cmake
Core/Inc/: FreeRTOSConfig.h  main.h
Core/Src/: cli.c  main.c  stm32f4xx_hal_msp.c
